--- a/blueocean-rest/pom.xml
+++ b/blueocean-rest/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.jenkins.blueocean</groupId>
     <artifactId>blueocean-parent</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>1.27.14</version>
   </parent>
 
   <artifactId>blueocean-rest</artifactId>
