--- a/blueocean-pipeline-scm-api/pom.xml
+++ b/blueocean-pipeline-scm-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.jenkins.blueocean</groupId>
         <artifactId>blueocean-parent</artifactId>
-        <version>${revision}${changelist}</version>
+        <version>1.27.16</version>
     </parent>
 
     <artifactId>blueocean-pipeline-scm-api</artifactId>
