Prepare the blueocean-bitbucket-pipeline to the bitbucket-source-branch-plugin changes in version 936.0.1 Make RunImplTest less flaky

--- a/pom.xml
+++ b/pom.xml
@@ -220,9 +220,16 @@
         <dependency>
             <groupId>io.jenkins.tools.bom</groupId>
             <artifactId>bom-${jenkins.baseline}.x</artifactId>
-            <version>3893.v213a_42768d35</version>
+            <version>4607.v67a_4791074d7</version>
             <scope>import</scope>
             <type>pom</type>
+        </dependency>
+
+        <!-- remove when update BOM to version that include bitbucket 936.0.1  -->
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>cloudbees-bitbucket-branch-source</artifactId>
+            <version>936.0.1</version>
         </dependency>
 
         <!-- Module versions -->
