--- a/blueocean-dashboard/pom.xml
+++ b/blueocean-dashboard/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>blueocean-parent</artifactId>
         <groupId>io.jenkins.blueocean</groupId>
-        <version>${revision}${changelist}</version>
+        <version>1.27.19</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
