--- a/pom.xml
+++ b/pom.xml
@@ -220,16 +220,16 @@
         <dependency>
             <groupId>io.jenkins.tools.bom</groupId>
             <artifactId>bom-${jenkins.baseline}.x</artifactId>
-            <version>4607.v67a_4791074d7</version>
+            <version>4770.v9a_2b_7a_9d8b_7f</version>
             <scope>import</scope>
             <type>pom</type>
         </dependency>
 
-        <!-- remove when update BOM to version that include bitbucket 936.0.1  -->
+        <!-- remove when update BOM to version that include bitbucket 936.4.0  -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>cloudbees-bitbucket-branch-source</artifactId>
-            <version>936.0.1</version>
+            <version>936.3.21099.v3352e675f0f6</version>
         </dependency>
 
         <!-- Module versions -->
