--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>io.jenkins.blueocean</groupId>
   <artifactId>blueocean-parent</artifactId>
-  <version>1.27.20</version>
+  <version>${revision}${changelist}</version>
   <packaging>pom</packaging>
 
   <name>Blue Ocean Parent</name>
@@ -25,7 +25,7 @@
   </licenses>
 
   <properties>
-    <revision>1.27.20</revision>
+    <revision>1.27.21</revision>
     <changelist>-SNAPSHOT</changelist>
     <gitHubRepo>jenkinsci/blueocean-plugin</gitHubRepo>
     <!--
@@ -52,7 +52,7 @@
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:https://github.com/${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>blueocean-parent-1.27.20</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <url>https://github.com/jenkinsci/blueocean-plugin</url>
