--- a/blueocean-bitbucket-pipeline/pom.xml
+++ b/blueocean-bitbucket-pipeline/pom.xml
@@ -26,6 +26,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>cloudbees-bitbucket-branch-source</artifactId>
+      <version>937.0.01123.vd3799b_936b_a_3</version>
       <exclusions>
         <!-- Upper bound fix: later version of jsch is picked from git-plugin's transitive dependency -->
         <exclusion>
