--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         and  acceptance-tests/runner/scripts/args.sh
     -->
     <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
-    <jenkins.baseline>2.479</jenkins.baseline>
+    <jenkins.baseline>2.504</jenkins.baseline>
     <jenkins.version>${jenkins.baseline}.3</jenkins.version>
     <javadoc.exec.goal>javadoc-no-fork</javadoc.exec.goal> <!-- stop initialize phase plugins executing twice -->
     <byte-buddy.version>1.17.2</byte-buddy.version>
@@ -220,7 +220,7 @@
         <dependency>
             <groupId>io.jenkins.tools.bom</groupId>
             <artifactId>bom-${jenkins.baseline}.x</artifactId>
-            <version>4770.v9a_2b_7a_9d8b_7f</version>
+            <version>5388.v3ea_2e00a_719a_</version>
             <scope>import</scope>
             <type>pom</type>
         </dependency>
@@ -229,7 +229,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>cloudbees-bitbucket-branch-source</artifactId>
-            <version>936.4.0</version>
+            <version>937.0.3</version>
         </dependency>
 
         <!-- Module versions -->
