--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -10,6 +10,14 @@ jobs:
       - uses: actions/stale@v10
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          stale-issue-label: Stale
+          stale-pr-label: Stale
+          stale-issue-message: |
+            This issue has been automatically marked as stale because it has been a
+            full year without activity. It will be closed if no further activity occurs.
+            Thank you for your contributions.          
           stale-pr-message: 'This PR is stale because it has been open 365 days with no activity. Remove stale label or comment or this will be closed in 30 days.'
           days-before-stale: 365
           days-before-pr-close: 30
+          close-issue-message: This issue has been closed due to it having no activity.
+          close-pr-message: This pull request has been closed due to it having no activity.          
