--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,4 +20,5 @@ jobs:
           days-before-stale: 365
           days-before-pr-close: 30
           close-issue-message: This issue has been closed due to it having no activity.
-          close-pr-message: This pull request has been closed due to it having no activity.          
+          close-pr-message: This pull request has been closed due to it having no activity.         
+          delete-branch: true
