StringEscapeUtils was moved from commons-lang to commons-text

--- a/blueocean-commons/pom.xml
+++ b/blueocean-commons/pom.xml
@@ -23,6 +23,10 @@
           <groupId>io.jenkins.plugins</groupId>
           <artifactId>commons-lang3-api</artifactId>
       </dependency>
+      <dependency>
+          <groupId>io.jenkins.plugins</groupId>
+          <artifactId>commons-text-api</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
