--- a/pom.xml
+++ b/pom.xml
@@ -191,11 +191,11 @@
           <artifactId>commons-codec</artifactId>
           <scope>provided</scope>
       </dependency>
-      <dependency>
-          <groupId>commons-lang</groupId>
-          <artifactId>commons-lang</artifactId>
-          <scope>provided</scope>
-      </dependency>
+<!--      <dependency>-->
+<!--          <groupId>commons-lang</groupId>-->
+<!--          <artifactId>commons-lang</artifactId>-->
+<!--          <scope>provided</scope>-->
+<!--      </dependency>-->
       <dependency>
           <groupId>org.mockito</groupId>
           <artifactId>mockito-core</artifactId>
@@ -523,10 +523,22 @@
                       <failOnError>${access-modifier-checker.failOnError}</failOnError>
                   </configuration>
               </plugin>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-enforcer-plugin</artifactId>
+                  <dependencies>
+                      <dependency>
+                          <groupId>de.skuzzle.enforcer</groupId>
+                          <artifactId>restrict-imports-enforcer-rule</artifactId>
+                          <version>3.0.0</version>
+                      </dependency>
+                  </dependencies>
+              </plugin>
           </plugins>
       </pluginManagement>
     <plugins>
         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
             <executions>
                 <execution>
@@ -539,9 +551,25 @@
                             <bannedDependencies>
                                 <excludes>
                                     <exclude>org.apache.commons:commons-lang3</exclude>
+                                    <exclude>commons-lang:commons-lang</exclude>
                                 </excludes>
                                 <searchTransitive>false</searchTransitive>
                             </bannedDependencies>
+                        </rules>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>check-commons-lang</id>
+                    <phase>process-sources</phase>
+                    <goals>
+                        <goal>enforce</goal>
+                    </goals>
+                    <configuration>
+                        <rules>
+                            <RestrictImports>
+                                <reason>Use commons-lang 2</reason>
+                                <bannedImport>org.apache.commons.lang.**</bannedImport>
+                            </RestrictImports>
                         </rules>
                     </configuration>
                 </execution>
